--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.1.3",
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
+    "mongoose": "^6.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
