--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.1.3",
+    "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
@@ -38,6 +39,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
