--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.12.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/azure-storage": "^3.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
@@ -30,6 +32,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.1.3",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
