--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.12.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/axios": "^1.0.0",
     "@nestjs/azure-storage": "^3.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
@@ -36,6 +37,7 @@
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
+    "node-telegram-bot-api": "^0.60.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -51,6 +53,7 @@
     "@types/jest": "27.4.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/node-telegram-bot-api": "^0.57.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
