--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
   },
+  "engines": {
+    "node": "14.20.0",
+    "npm": "6.14.17"
+  },
   "dependencies": {
     "@azure/storage-blob": "^12.12.0",
     "@nestjs-modules/mailer": "^1.8.1",
