--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/swagger": "^6.1.3",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cloudinary": "^1.32.0",
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
