--- a/package.json
+++ b/package.json
@@ -38,13 +38,17 @@
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/swagger": "^6.1.3",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^3.6.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cloudinary": "^1.32.0",
+    "connect-redis": "^6.1.3",
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
     "node-telegram-bot-api": "^0.60.0",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
