--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cloudinary": "^1.32.0",
     "connect-redis": "^6.1.3",
     "cross-env": "^7.0.3",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
     "node-telegram-bot-api": "^0.60.0",
@@ -60,7 +61,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/jest": "27.4.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
