--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: GitHub Actions
+run-name: ${{ github.actor }} is testing out the Application 🚀
 on:
   push:
     branches: [ master, ci/cd ]
@@ -32,7 +32,7 @@ env:
   NODE_TLS_REJECT_UNAUTHORIZED: 0
 
 jobs:
-  Explore-GitHub-Actions:
+  testing:
     runs-on: ubuntu-latest
     strategy:
       matrix:
