--- a/package.json
+++ b/package.json
@@ -36,15 +36,17 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.3",
     "bcrypt": "^5.1.0",
     "cache-manager": "^3.6.1",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "cloudinary": "^1.32.0",
     "connect-redis": "^6.1.3",
     "cross-env": "^7.0.3",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
