--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "heroku-postbuild": "npm install  && npm run build"
   },
   "engines": {
-    "node": "14.20.0",
-    "npm": "6.14.17"
+    "node": ">=14.20.0",
+    "npm": ">=6.14.17"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.12.0",
