--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "mongoose": "^6.7.3",
+    "node-cache": "^5.1.2",
     "node-telegram-bot-api": "^0.60.0",
     "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
